[project]
name = "zerg"
version = "0.2.0"
description = "异虫，倾巢而出 — small, sharp, and hungry"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28",
    "selectolax>=0.3",
    "orjson>=3.10",
]

[project.optional-dependencies]
impersonate = ["curl_cffi>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zerg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ipython>=9.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=5.1",
    "ruff>=0.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["spiders", "data", "notes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["ASYNC230", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"zerg/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
